--- a/lab02/demo12.html
+++ b/lab02/demo12.html
@@ -45,5 +45,6 @@
     <div class="right-sidebar">Right-sidebar</div>
     <div class="footer">Footer</div>
   </div>
+  <div class="adv">Adv</div>
 </body>
 </html>
